--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,19 @@ dependencies:
   shared_preferences: ^2.0.18
   flutter_bloc: ^8.1.2
   http: ^0.13.5
+  flutter_launcher_icons: ^0.12.0
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/img/0.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -66,6 +74,7 @@ flutter:
     - assets/img/
     - assets/img/Group 31.png
     - assets/img/Group 21.png
+    - assets/img/0.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
